manifests/grafana-ingress.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: grafana
  namespace: monitoring
  annotations:
    kubernetes.io/ingress.class: traefik
spec:
  rules:
  - host: grafana.ui
    http:
      paths:
      - path: /
        backend:
          serviceName: grafana
          servicePort: http
