manifests/prometheus-ingress.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: prometheus-k8s
  namespace: monitoring
  annotations:
    kubernetes.io/ingress.class: traefik
spec:
  rules:
  - host: prometheus-k8s.ui
    http:
      paths:
      - path: /
        backend:
          serviceName: prometheus-k8s
          servicePort: web
